[gd_scene load_steps=11 format=3 uid="uid://c235sov7e8q71"]

[ext_resource type="Script" path="res://UI/StartMenu.gd" id="1_ofk3n"]
[ext_resource type="Texture2D" uid="uid://e4y4wev4mso3" path="res://SplashScreen.png" id="2_ugo50"]
[ext_resource type="Theme" uid="uid://dsfsg1to7ip3v" path="res://UI/Theme/UItheme.tres" id="3_dls7o"]
[ext_resource type="Script" path="res://UI/LevelSelect.gd" id="4_spj7m"]
[ext_resource type="StyleBox" uid="uid://45sap28j1yvh" path="res://UI/Theme/backButtonDefault.tres" id="5_8mms2"]
[ext_resource type="StyleBox" uid="uid://h8hodjnduqvs" path="res://UI/Theme/backButtonPressed.tres" id="6_d10y3"]
[ext_resource type="Script" path="res://UI/BackButton.gd" id="7_i2x6j"]
[ext_resource type="StyleBox" uid="uid://b5j5w24yh82rf" path="res://UI/Theme/panel.tres" id="8_fvjmx"]
[ext_resource type="Script" path="res://UI/SettingMenu.gd" id="8_vo3vl"]
[ext_resource type="StyleBox" uid="uid://drndgy3a8ov1b" path="res://UI/Theme/backButtonHover.tres" id="10_tnmrg"]

[node name="StartMenu" type="Control" node_paths=PackedStringArray("startMenu", "levelSelect", "settings", "startButton")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ofk3n")
startMenu = NodePath("MenuButtons")
levelSelect = NodePath("LevelButtons")
settings = NodePath("SettingMenu")
startButton = NodePath("MenuButtons/Start")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -120.0
offset_top = -80.0
offset_right = 120.0
offset_bottom = 80.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ugo50")
stretch_mode = 2

[node name="MenuButtons" type="VBoxContainer" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -48.0
offset_top = 40.0
offset_right = 49.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_dls7o")
alignment = 1

[node name="Start" type="Button" parent="MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_bottom = NodePath("../LevelSelect")
focus_next = NodePath("../LevelSelect")
theme = ExtResource("3_dls7o")
text = "Start Building"

[node name="LevelSelect" type="Button" parent="MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../Start")
focus_neighbor_bottom = NodePath("../Settings")
focus_next = NodePath("../Settings")
focus_previous = NodePath("../Start")
theme = ExtResource("3_dls7o")
text = "Level Select"

[node name="Settings" type="Button" parent="MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
focus_neighbor_top = NodePath("../LevelSelect")
focus_neighbor_bottom = NodePath("../Quit")
focus_next = NodePath("../Quit")
focus_previous = NodePath("../LevelSelect")
theme = ExtResource("3_dls7o")
text = "Settings"

[node name="Quit" type="Button" parent="MenuButtons"]
layout_mode = 2
size_flags_vertical = 3
theme = ExtResource("3_dls7o")
text = "Quit"

[node name="LevelButtons" type="Panel" parent="."]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -40.0
offset_right = 20.0
grow_horizontal = 2
grow_vertical = 0

[node name="BackButton" type="Button" parent="LevelButtons"]
layout_mode = 2
offset_left = 96.0
offset_top = -122.0
offset_right = 116.0
offset_bottom = -94.0
size_flags_horizontal = 8
size_flags_vertical = 0
theme = ExtResource("3_dls7o")
theme_override_styles/normal = ExtResource("5_8mms2")
theme_override_styles/hover = ExtResource("10_tnmrg")
theme_override_styles/pressed = ExtResource("6_d10y3")
theme_override_styles/focus = ExtResource("10_tnmrg")
text = "X"
script = ExtResource("7_i2x6j")

[node name="LevelSelect" type="ItemList" parent="LevelButtons"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -133.0
offset_right = 100.0
grow_horizontal = 2
grow_vertical = 0
focus_neighbor_right = NodePath("../BackButton")
focus_previous = NodePath("../BackButton")
theme = ExtResource("3_dls7o")
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_hovered_color = Color(1, 1, 1, 1)
theme_override_colors/font_selected_color = Color(1, 1, 1, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/v_separation = 6
max_columns = 3
same_column_width = true
script = ExtResource("4_spj7m")

[node name="SettingMenu" type="Panel" parent="." node_paths=PackedStringArray("control1", "volume", "TTSVolume", "TTSRate", "Voice", "keyboardToggle", "TTSToggle")]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -70.0
offset_top = -215.0
offset_right = 65.0
grow_horizontal = 2
grow_vertical = 0
theme = ExtResource("3_dls7o")
theme_override_styles/panel = ExtResource("8_fvjmx")
script = ExtResource("8_vo3vl")
control1 = NodePath("VBoxContainer/Volume Control")
volume = NodePath("VBoxContainer/Volume Control")
TTSVolume = NodePath("VBoxContainer/TTS Volume Control")
TTSRate = NodePath("VBoxContainer/TTS Rate Control")
Voice = NodePath("VBoxContainer/Voice Select")
keyboardToggle = NodePath("VBoxContainer/Keyboard")
TTSToggle = NodePath("VBoxContainer/Text to speech enable")

[node name="BackButton" type="Button" parent="SettingMenu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -21.0
offset_top = -28.0
offset_right = -1.0
grow_horizontal = 0
size_flags_horizontal = 8
size_flags_vertical = 0
focus_neighbor_bottom = NodePath("../VBoxContainer/Volume Control")
focus_next = NodePath("../VBoxContainer/Volume Control")
theme = ExtResource("3_dls7o")
theme_override_styles/normal = ExtResource("5_8mms2")
theme_override_styles/hover = ExtResource("10_tnmrg")
theme_override_styles/pressed = ExtResource("6_d10y3")
theme_override_styles/focus = ExtResource("10_tnmrg")
text = "X"
script = ExtResource("7_i2x6j")

[node name="VBoxContainer" type="VBoxContainer" parent="SettingMenu"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 3.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_dls7o")

[node name="Sound Volume" type="Label" parent="SettingMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_dls7o")
text = "Sound Volume"
horizontal_alignment = 1
vertical_alignment = 2

[node name="Volume Control" type="HSlider" parent="SettingMenu/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../../BackButton")
focus_neighbor_bottom = NodePath("../Text to speech enable")
focus_next = NodePath("../Text to speech enable")
focus_previous = NodePath("../../BackButton")
theme = ExtResource("3_dls7o")
min_value = -80.0
max_value = 24.0

[node name="Text to speech enable" type="CheckButton" parent="SettingMenu/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Volume Control")
focus_neighbor_bottom = NodePath("../TTS Volume Control")
focus_next = NodePath("../TTS Volume Control")
focus_previous = NodePath("../Volume Control")
theme = ExtResource("3_dls7o")
button_pressed = true
text = "TTS"

[node name="TTS Volume" type="Label" parent="SettingMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_dls7o")
text = "TTS Volume"
horizontal_alignment = 1
vertical_alignment = 2

[node name="TTS Volume Control" type="HSlider" parent="SettingMenu/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Text to speech enable")
focus_neighbor_bottom = NodePath("../TTS Rate Control")
focus_next = NodePath("../TTS Rate Control")
focus_previous = NodePath("../Text to speech enable")
theme = ExtResource("3_dls7o")
value = 50.0

[node name="TTS Rate" type="Label" parent="SettingMenu/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_dls7o")
text = "TTS Rate"
horizontal_alignment = 1
vertical_alignment = 2

[node name="TTS Rate Control" type="HSlider" parent="SettingMenu/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../TTS Volume Control")
focus_neighbor_bottom = NodePath("../Voice Select")
focus_next = NodePath("../Voice Select")
focus_previous = NodePath("../TTS Volume Control")
theme = ExtResource("3_dls7o")
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0

[node name="Voice Select" type="SpinBox" parent="SettingMenu/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../TTS Rate Control")
focus_neighbor_bottom = NodePath("../Keyboard")
focus_next = NodePath("../Keyboard")
focus_previous = NodePath("../TTS Rate Control")
focus_mode = 2
prefix = "Voice:"

[node name="Keyboard" type="CheckButton" parent="SettingMenu/VBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../Voice Select")
focus_neighbor_bottom = NodePath("../../BackButton")
focus_next = NodePath("../../BackButton")
focus_previous = NodePath("../Voice Select")
theme = ExtResource("3_dls7o")
text = "Keyboard"

[connection signal="focus_entered" from="MenuButtons/Start" to="." method="speakFocus"]
[connection signal="pressed" from="MenuButtons/Start" to="." method="startGame"]
[connection signal="focus_entered" from="MenuButtons/LevelSelect" to="." method="speakFocus"]
[connection signal="pressed" from="MenuButtons/LevelSelect" to="." method="_on_level_select_pressed"]
[connection signal="focus_entered" from="MenuButtons/Settings" to="." method="speakFocus"]
[connection signal="pressed" from="MenuButtons/Settings" to="." method="_on_settings_pressed"]
[connection signal="focus_entered" from="MenuButtons/Quit" to="." method="speakFocus"]
[connection signal="pressed" from="MenuButtons/Quit" to="." method="quit"]
[connection signal="focus_entered" from="LevelButtons/BackButton" to="LevelButtons/BackButton" method="_on_focus_entered"]
[connection signal="pressed" from="LevelButtons/BackButton" to="." method="_on_back_button_pressed"]
[connection signal="item_activated" from="LevelButtons/LevelSelect" to="LevelButtons/LevelSelect" method="_on_item_activated"]
[connection signal="item_selected" from="LevelButtons/LevelSelect" to="LevelButtons/LevelSelect" method="_on_item_selected"]
[connection signal="visibility_changed" from="LevelButtons/LevelSelect" to="LevelButtons/LevelSelect" method="_on_visibility_changed"]
[connection signal="visibility_changed" from="SettingMenu" to="SettingMenu" method="_on_visibility_changed"]
[connection signal="focus_entered" from="SettingMenu/BackButton" to="SettingMenu/BackButton" method="_on_focus_entered"]
[connection signal="pressed" from="SettingMenu/BackButton" to="." method="_on_settings_closed_button_pressed"]
[connection signal="drag_ended" from="SettingMenu/VBoxContainer/Volume Control" to="SettingMenu" method="_on_volume_control_drag_ended"]
[connection signal="focus_entered" from="SettingMenu/VBoxContainer/Volume Control" to="SettingMenu" method="speakCurrentOption"]
[connection signal="focus_entered" from="SettingMenu/VBoxContainer/Text to speech enable" to="SettingMenu" method="speakCurrentOption"]
[connection signal="toggled" from="SettingMenu/VBoxContainer/Text to speech enable" to="SettingMenu" method="_on_text_to_speech_enable_toggled"]
[connection signal="drag_ended" from="SettingMenu/VBoxContainer/TTS Volume Control" to="SettingMenu" method="_on_tts_volume_control_drag_ended"]
[connection signal="focus_entered" from="SettingMenu/VBoxContainer/TTS Volume Control" to="SettingMenu" method="speakCurrentOption"]
[connection signal="drag_ended" from="SettingMenu/VBoxContainer/TTS Rate Control" to="SettingMenu" method="_on_tts_rate_control_drag_ended"]
[connection signal="focus_entered" from="SettingMenu/VBoxContainer/TTS Rate Control" to="SettingMenu" method="speakCurrentOption"]
[connection signal="focus_entered" from="SettingMenu/VBoxContainer/Voice Select" to="SettingMenu" method="speakCurrentOption"]
[connection signal="value_changed" from="SettingMenu/VBoxContainer/Voice Select" to="SettingMenu" method="_on_voice_select_value_changed"]
[connection signal="focus_entered" from="SettingMenu/VBoxContainer/Keyboard" to="SettingMenu" method="speakCurrentOption"]
[connection signal="toggled" from="SettingMenu/VBoxContainer/Keyboard" to="SettingMenu" method="_on_keyboard_toggled"]
